--- a/ui/menu.templ
+++ b/ui/menu.templ
@@ -27,8 +27,16 @@ templ Menu() {
 				link:  "/docs/core-concepts/components",
 			},
 			{
+				label: "Nested Components",
+				link:  "/docs/core-concepts/nested-components",
+			},
+			{
 				label: "Routing",
 				link:  "/docs/core-concepts/routing",
+			},
+			{
+				label: "Nested Routing",
+				link:  "/docs/core-concepts/nested-routing",
 			},
 		})
 	</ul>
