--- a/ui/root.templ
+++ b/ui/root.templ
@@ -60,7 +60,7 @@ templ drawerContent() {
 					@githubIcon("inline-block w-full h-full")
 				</a>
 			</div>
-			<div id="outlet-container" class="flex grow w-full min-h-0 overflow-y-scroll justify-center">
+			<div id="outlet-container" class="flex grow w-full min-h-0 justify-center">
 				@gong.NewOutlet().WithClass("w-full h-full")
 			</div>
 		</div>
