--- a/ui/document.templ
+++ b/ui/document.templ
@@ -23,7 +23,7 @@ templ (view DocumentView) View() {
 	nextDoc, nextDocErr := view.DocManager.GetByPosition(document.Metadata().Position + 1)
 	}}
 	<div class="flex flex-row w-full h-full p-4">
-		<div class="flex flex-col gap-4 place-items-center grow min-w-0 overflow-y-scroll pr-4">
+		<div class="flex flex-col gap-4 place-items-center grow min-w-0 overflow-y-scroll pr-4 max-w-7xl">
 			<div class="prose max-w-full pb-8 text-scale">
 				@templ.ComponentFunc(func(ctx context.Context, w io.Writer) error {
 					_, err := io.WriteString(w, document.Html())
