--- a/ui/root.templ
+++ b/ui/root.templ
@@ -22,7 +22,7 @@ templ (view RootView) Head() {
 templ (view RootView) View() {
 	@initScript()
 	<div class="flex justify-center w-full h-full">
-		<div class="drawer lg:drawer-open w-full h-full bg-base-100 max-w-7xl" x-data>
+		<div class="drawer lg:drawer-open w-fit h-full bg-base-100" x-data>
 			<input id="my-drawer" type="checkbox" class="drawer-toggle"/>
 			@drawerSide()
 			@drawerContent()
