--- a/ui/root.templ
+++ b/ui/root.templ
@@ -33,7 +33,7 @@ templ (view RootView) View() {
 templ drawerSide() {
 	<div class="drawer-side z-50">
 		<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-		<div class="bg-base-100 min-h-screen min-w-64">
+		<div class="bg-base-100 min-h-screen min-w-64 max-w-64">
 			<div class="flex flex-col">
 				<div class="navbar px-4">
 					@gong.NewLink("/") {
