--- a/ui/root.templ
+++ b/ui/root.templ
@@ -6,15 +6,19 @@ type RootView struct {
 	Menu gong.Component
 }
 
+func (view RootView) HtmlAttrs() templ.Attributes {
+	return templ.Attributes{
+		"data-theme": "light",
+	}
+}
+
 templ (view RootView) Head() {
 	<head>
 		<meta charset="utf-8"/>
 		<title>Gong</title>
-		<html data-theme="light"></html>
-		<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
 		<link href="/public/index.css" rel="stylesheet"/>
-		<link rel="icon" type="image/x-icon" href="/public/icon.png"/>
-		<script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+		<link rel="icon" type="image/png" href="/public/icon.png"/>
+		<script src="https://unpkg.com/htmx.org@2.0.4" integrity="sha384-HGfztofotfshcF7+8n44JQL2oJmowVChPTg48S+jvZoztPfvwD79OC/LTtG6dMp+" crossorigin="anonymous"></script>
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism.min.css" rel="stylesheet"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js" data-manual></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-go.min.js"></script>
