Add custom markdown renderer with code container styling

--- a/tailwind.css
+++ b/tailwind.css
@@ -14,12 +14,12 @@
     @apply btn-xl lg:btn-lg;
 }
 
-pre {
-    position: relative;
-}
-
 .gong-outlet {
     @apply w-full h-full;
+}
+
+.code-container {
+    position: relative;
 }
 
 .copy-button {
