--- a/tailwind.css
+++ b/tailwind.css
@@ -2,7 +2,7 @@
 @source "./ui/*.templ";
 @plugin "@tailwindcss/typography";
 @plugin "daisyui" {
-    themes: light;
+    themes: light, cupcake, dim;
     exclude: rootscrollgutter;
 }
 
