--- a/ui/document.templ
+++ b/ui/document.templ
@@ -36,10 +36,10 @@ templ (c DocumentComponent) View() {
 				<div>
 					if prevDocErr == nil {
 						<div hx-on:click={ templ.JSFuncCall("htmx.trigger", "#"+buildMenuLinkID("/docs"+prevDoc.Path()), "click") }>
-							<div class="btn btn-scale btn-soft">
+							<div class="btn btn-scale btn-soft btn-primary">
 								<div class="flex flex-col place-items-start">
 									<div class="text-sm">Previous</div>
-									<div class="text-primary font-bold">
+									<div class="font-bold">
 										{ prevDoc.Metadata().Label }
 									</div>
 								</div>
@@ -50,10 +50,10 @@ templ (c DocumentComponent) View() {
 				<div>
 					if nextDocErr == nil {
 						<div hx-on:click={ templ.JSFuncCall("htmx.trigger", "#"+buildMenuLinkID("/docs"+nextDoc.Path()), "click") }>
-							<div class="btn btn-scale btn-soft">
+							<div class="btn btn-scale btn-soft btn-primary">
 								<div class="flex flex-col place-items-end">
 									<div class="text-sm">Next</div>
-									<div class="text-primary font-bold">
+									<div class="font-bold">
 										{ nextDoc.Metadata().Label }
 									</div>
 								</div>
