--- a/ui/document.templ
+++ b/ui/document.templ
@@ -78,7 +78,7 @@ templ documentNode(node *document.Node) {
 		children := node.Children()
 	}}
 	<li>
-		<div class="border-l-2 pl-2 text-current/60 hover:text-secondary">
+		<div class="border-l-2 pl-2 text-current/50 hover:text-secondary transition-all">
 			<a class="no-underline text-inherit" href={ templ.URL("#" + node.ID()) }>
 				{ node.Title() }
 			</a>
