--- a/tailwind.css
+++ b/tailwind.css
@@ -14,6 +14,10 @@
     @apply btn-xl lg:btn-lg;
 }
 
+.btn-icon-scale {
+    @apply btn-xl lg:btn-md;
+}
+
 .gong-outlet {
     @apply w-full h-full;
 }
@@ -48,7 +52,7 @@ h6 {
 }
 
 .header-link {
-    @apply btn btn-sm btn-secondary btn-soft btn-square text-xl font-bold mr-4;
+    @apply btn btn-lg lg:btn-sm btn-secondary btn-soft btn-square text-4xl lg:text-xl font-bold mr-4;
 }
 
 html {
