--- a/ui/root.templ
+++ b/ui/root.templ
@@ -49,11 +49,11 @@ templ drawerContent() {
 		<div class="flex flex-col w-full h-full">
 			<div class="navbar flex justify-between">
 				<div>
-					<label for="my-drawer" class="btn btn-square btn-ghost btn-scale p-1 drawer-button lg:hidden">
+					<label for="my-drawer" class="btn btn-square btn-ghost btn-icon-scale p-1 drawer-button lg:hidden">
 						@sidebarIcon("inline-block w-full h-full fill-base-content")
 					</label>
 				</div>
-				<a class="btn btn-square btn-ghost btn-scale p-1" href="https://github.com/troygilman/gong">
+				<a class="btn btn-square btn-ghost btn-icon-scale p-1" href="https://github.com/troygilman/gong">
 					@githubIcon("inline-block w-full h-full fill-base-content")
 				</a>
 			</div>
