--- a/tailwind.css
+++ b/tailwind.css
@@ -52,7 +52,7 @@ h6 {
 }
 
 .header-link {
-    @apply btn btn-lg lg:btn-sm btn-secondary btn-soft btn-square text-4xl lg:text-xl font-bold mr-4;
+    @apply btn btn-lg lg:btn-sm btn-soft btn-square text-base-content/50 text-4xl lg:text-xl font-bold mr-4;
 }
 
 html {
