--- a/ui/document.templ
+++ b/ui/document.templ
@@ -25,7 +25,7 @@ templ (c DocumentComponent) View() {
 	nextDoc, nextDocErr := c.manager.GetByPosition(c.doc.Metadata().Position + 1)
 	}}
 	<div class="flex flex-row w-full h-full">
-		<div class="flex flex-col gap-4 place-items-center grow min-w-0 overflow-y-scroll px-4 py-4 max-w-7xl">
+		<div class="flex flex-col gap-4 place-items-center grow min-w-0 overflow-y-scroll scroll-smooth px-4 py-4 max-w-7xl">
 			<div class="prose max-w-full pb-4 text-scale">
 				@templ.ComponentFunc(func(ctx context.Context, w io.Writer) error {
 					_, err := io.WriteString(w, c.doc.Html())
