--- a/ui/document.templ
+++ b/ui/document.templ
@@ -36,7 +36,7 @@ templ (c DocumentComponent) View() {
 				<div>
 					if prevDocErr == nil {
 						<div hx-on:click={ templ.JSFuncCall("htmx.trigger", "#"+buildMenuLinkID("/docs"+prevDoc.Path()), "click") }>
-							<div class="btn btn-scale btn-soft btn-primary">
+							<div class="btn btn-scale btn-outline hover:btn-primary">
 								<div class="flex flex-col place-items-start">
 									<div class="text-sm">Previous</div>
 									<div class="font-bold">
@@ -50,7 +50,7 @@ templ (c DocumentComponent) View() {
 				<div>
 					if nextDocErr == nil {
 						<div hx-on:click={ templ.JSFuncCall("htmx.trigger", "#"+buildMenuLinkID("/docs"+nextDoc.Path()), "click") }>
-							<div class="btn btn-scale btn-soft btn-primary">
+							<div class="btn btn-scale btn-outline hover:btn-primary">
 								<div class="flex flex-col place-items-end">
 									<div class="text-sm">Next</div>
 									<div class="font-bold">
@@ -79,11 +79,11 @@ templ documentNode(node *document.Node) {
 	}}
 	<li class="p-0">
 		<a
-			class="flex flex-row no-underline  transition-all group"
+			class="flex flex-row no-underline group"
 			href={ templ.URL("#" + node.ID()) }
 		>
 			<div class="divider divider-horizontal group-hover:divider-secondary m-0"></div>
-			<div class="ml-1 text-current/50 group-hover:text-secondary">
+			<div class="ml-1 text-current/50 group-hover:text-secondary transition-colors">
 				{ node.Title() }
 			</div>
 		</a>
