--- a/ui/document.templ
+++ b/ui/document.templ
@@ -25,8 +25,8 @@ templ (c DocumentComponent) View() {
 	nextDoc, nextDocErr := c.manager.GetByPosition(c.doc.Metadata().Position + 1)
 	}}
 	<div class="flex flex-row w-full h-full">
-		<div class="flex flex-col gap-4 place-items-center grow min-w-0 overflow-y-scroll scroll-smooth px-4 py-4 max-w-7xl">
-			<div class="prose max-w-full pb-4 text-scale">
+		<div class="flex flex-col gap-4 place-items-center grow min-w-0 w-7xl overflow-y-scroll scroll-smooth px-4 py-4 max-w-7xl">
+			<div class="prose max-w-full w-full pb-4 text-scale">
 				@templ.ComponentFunc(func(ctx context.Context, w io.Writer) error {
 					_, err := io.WriteString(w, c.doc.Html())
 					return err
@@ -63,13 +63,22 @@ templ (c DocumentComponent) View() {
 				</div>
 			</div>
 		</div>
-		<div class="prose text-scale hidden lg:flex max-w-64 min-w-64 overflow-y-scroll">
-			<ul class="list-none list-outside px-2">
-				for _, child := range c.doc.Node().Children()[0].Children() {
+		@headerTree(c.doc.Node())
+	</div>
+}
+
+templ headerTree(node *document.Node) {
+	{{
+		children := node.Children()
+	}}
+	<div class="prose text-scale hidden lg:flex max-w-64 min-w-64 overflow-y-scroll">
+		<ul class="list-none list-outside px-2">
+			if len(children) > 0 {
+				for _, child := range children[0].Children() {
 					@documentNode(child)
 				}
-			</ul>
-		</div>
+			}
+		</ul>
 	</div>
 }
 
