Add navigation arrows to previous and next document buttons

--- a/ui/document.templ
+++ b/ui/document.templ
@@ -36,7 +36,8 @@ templ (c DocumentComponent) View() {
 				<div>
 					if prevDocErr == nil {
 						<div hx-on:click={ templ.JSFuncCall("htmx.trigger", "#"+buildMenuLinkID("/docs"+prevDoc.Path()), "click") }>
-							<div class="btn btn-scale btn-soft hover:btn-primary">
+							<div class="btn btn-scale btn-soft hover:btn-primary group">
+								@arrowIcon("size-8 fill-base-content group-hover:fill-primary-content rotate-180")
 								<div class="flex flex-col place-items-start">
 									<div class="text-sm">Previous</div>
 									<div class="font-bold">
@@ -50,13 +51,14 @@ templ (c DocumentComponent) View() {
 				<div>
 					if nextDocErr == nil {
 						<div hx-on:click={ templ.JSFuncCall("htmx.trigger", "#"+buildMenuLinkID("/docs"+nextDoc.Path()), "click") }>
-							<div class="btn btn-scale btn-soft hover:btn-primary">
+							<div class="btn btn-scale btn-soft hover:btn-primary group">
 								<div class="flex flex-col place-items-end">
 									<div class="text-sm">Next</div>
 									<div class="font-bold">
 										{ nextDoc.Metadata().Label }
 									</div>
 								</div>
+								@arrowIcon("size-8 fill-base-content group-hover:fill-primary-content")
 							</div>
 						</div>
 					}
